--- a/css/maincss.css
+++ b/css/maincss.css
@@ -12,11 +12,23 @@ body{
     width: 100%;
     height: 100px;
     background-color: #fcf6b1;
+    
+}
+.nav-sticky{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 100%;
+    height: 100px;
+    background-color: #fcf6b1;
+    position: fixed;
+    top: 0;
 }
 
 .menu{
     display: flex;
     list-style-type: none;
+    
 }
 
 .menuItemsblue{
@@ -72,6 +84,8 @@ body{
     text-align: center;
 }
 
+
+
 .imgindex2{
     width: 200px;
     height: 300px;
@@ -92,3 +106,49 @@ body{
 a{    text-decoration: none;}
 
 
+ /*  Quienes somos */
+ 
+ .h2quienes-somos{
+    padding-top: 100px;
+    padding-right: 100px;
+    font-family: "Open Sans", sans-serif;
+    font-weight: 500;
+    font-style: normal;
+    font-size: 40px;
+    width: 720px;
+    line-height: 1.1em;
+    color: #202020;
+    letter-spacing: 3px;
+    text-shadow: 1px 1px #5c5c5c;
+    
+ }
+ .mainquienes-somos{
+    margin-left: 50px;
+    font-family: "Open Sans", sans-serif;
+    width: 500px;
+    line-height: 30px;
+    color: #8d8b8b;
+    margin-top: 22px;
+
+ }
+
+ .img1-quienes-somos,.img2-quienes-somos,.img3-quienes-somos,.img4-quienes-somos{
+    width: 500px;
+}
+
+.img1-somos, .img2-somos, .img3-somos, .img4-somos{
+    width: 250px;
+    height: 200px;
+    margin: 2%;
+    
+    
+}
+.img1-somos{
+    margin-left: 65px;
+}
+
+
+.container-img-somos{
+    display: flex;
+    width: 100%;
+}
